--- a/internal/projects/bulleit/Stamped/StampDetailViewController.xib
+++ b/internal/projects/bulleit/Stamped/StampDetailViewController.xib
@@ -77,7 +77,7 @@
 									<object class="IBUIImageView" id="387020970">
 										<reference key="NSNextResponder" ref="591332047"/>
 										<int key="NSvFlags">274</int>
-										<string key="NSFrame">{{300, 31}, {8, 11}}</string>
+										<string key="NSFrame">{{288, 25}, {23, 23}}</string>
 										<reference key="NSSuperview" ref="591332047"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="749710472"/>
@@ -87,7 +87,7 @@
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 										<object class="NSCustomResource" key="IBUIImage">
 											<string key="NSClassName">NSImage</string>
-											<string key="NSResourceName">disclosure_arrow.png</string>
+											<string key="NSResourceName">gray_disclosure_arrow.png</string>
 										</object>
 									</object>
 								</object>
@@ -348,10 +348,7 @@
 								<reference key="NSSuperview" ref="490942180"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="511216842"/>
-								<object class="NSColor" key="IBUIBackgroundColor">
-									<int key="NSColorSpace">2</int>
-									<bytes key="NSRGB">MC4yODIzNTI5NTQxIDAuNzAxOTYwODAyMSAwLjIyNzQ1MDk5NjYAA</bytes>
-								</object>
+								<reference key="IBUIBackgroundColor" ref="140928236"/>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
 						</object>
@@ -382,7 +379,7 @@
 						<string key="NSFrame">{{32, 367}, {80, 49}}</string>
 						<reference key="NSSuperview" ref="880728759"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="358418181"/>
+						<reference key="NSNextKeyView" ref="763577215"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUIContentMode">1</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -393,7 +390,7 @@
 							<double key="NSSize">10</double>
 							<int key="NSfFlags">16</int>
 						</object>
-						<double key="IBUIImageEdgeInsets.top">-1</double>
+						<double key="IBUIImageEdgeInsets.top">-8</double>
 						<double key="IBUIImageEdgeInsets.bottom">0.0</double>
 						<double key="IBUIImageEdgeInsets.left">0.0</double>
 						<double key="IBUIImageEdgeInsets.right">0.0</double>
@@ -421,7 +418,7 @@
 						<string key="NSFrame">{{120, 367}, {80, 49}}</string>
 						<reference key="NSSuperview" ref="880728759"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="537858746"/>
+						<reference key="NSNextKeyView" ref="970363619"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUIContentMode">1</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -429,6 +426,10 @@
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<reference key="IBUIFont" ref="663283930"/>
 						<bool key="IBUIAdjustsImageWhenHighlighted">NO</bool>
+						<double key="IBUIImageEdgeInsets.top">-8</double>
+						<double key="IBUIImageEdgeInsets.bottom">0.0</double>
+						<double key="IBUIImageEdgeInsets.left">-3</double>
+						<double key="IBUIImageEdgeInsets.right">0.0</double>
 						<reference key="IBUIHighlightedTitleColor" ref="140928236"/>
 						<reference key="IBUINormalTitleColor" ref="577811154"/>
 						<reference key="IBUINormalTitleShadowColor" ref="508534976"/>
@@ -451,16 +452,17 @@
 						<string key="NSFrame">{{208, 367}, {80, 49}}</string>
 						<reference key="NSSuperview" ref="880728759"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="337528872"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUIContentMode">1</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<reference key="IBUIFont" ref="663283930"/>
-						<double key="IBUIContentEdgeInsets.top">-4</double>
+						<double key="IBUIContentEdgeInsets.top">-12</double>
 						<double key="IBUIContentEdgeInsets.bottom">0.0</double>
 						<double key="IBUIContentEdgeInsets.left">0.0</double>
-						<double key="IBUIContentEdgeInsets.right">0.0</double>
+						<double key="IBUIContentEdgeInsets.right">-4</double>
 						<reference key="IBUIHighlightedTitleColor" ref="140928236"/>
 						<reference key="IBUINormalTitleColor" ref="577811154"/>
 						<reference key="IBUINormalTitleShadowColor" ref="508534976"/>
@@ -472,6 +474,82 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">tab_icon_share.png</string>
 						</object>
+					</object>
+					<object class="IBUILabel" id="763577215">
+						<reference key="NSNextResponder" ref="880728759"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{47, 399}, {50, 16}}</string>
+						<reference key="NSSuperview" ref="880728759"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="358418181"/>
+						<string key="NSReuseIdentifierKey">_NS:311</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<int key="IBUIContentMode">7</int>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<string key="IBUIText">Stamp</string>
+						<object class="NSFont" key="IBUIFont" id="74241631">
+							<string key="NSName">Helvetica-Bold</string>
+							<double key="NSSize">10</double>
+							<int key="NSfFlags">16</int>
+						</object>
+						<object class="NSColor" key="IBUITextColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC42IDAuNiAwLjYAA</bytes>
+						</object>
+						<nil key="IBUIHighlightedColor"/>
+						<int key="IBUIBaselineAdjustment">1</int>
+						<float key="IBUIMinimumFontSize">10</float>
+						<int key="IBUITextAlignment">1</int>
+					</object>
+					<object class="IBUILabel" id="970363619">
+						<reference key="NSNextResponder" ref="880728759"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{135, 399}, {50, 16}}</string>
+						<reference key="NSSuperview" ref="880728759"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="537858746"/>
+						<string key="NSReuseIdentifierKey">_NS:311</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<int key="IBUIContentMode">7</int>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<string key="IBUIText">To-Do</string>
+						<reference key="IBUIFont" ref="74241631"/>
+						<object class="NSColor" key="IBUITextColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC42IDAuNiAwLjYAA</bytes>
+						</object>
+						<nil key="IBUIHighlightedColor"/>
+						<int key="IBUIBaselineAdjustment">1</int>
+						<float key="IBUIMinimumFontSize">10</float>
+						<int key="IBUITextAlignment">1</int>
+					</object>
+					<object class="IBUILabel" id="337528872">
+						<reference key="NSNextResponder" ref="880728759"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{223, 399}, {50, 16}}</string>
+						<reference key="NSSuperview" ref="880728759"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
+						<string key="NSReuseIdentifierKey">_NS:311</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<int key="IBUIContentMode">7</int>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<string key="IBUIText">Share</string>
+						<reference key="IBUIFont" ref="74241631"/>
+						<object class="NSColor" key="IBUITextColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC42IDAuNiAwLjYAA</bytes>
+						</object>
+						<nil key="IBUIHighlightedColor"/>
+						<int key="IBUIBaselineAdjustment">1</int>
+						<float key="IBUIMinimumFontSize">10</float>
+						<int key="IBUITextAlignment">1</int>
 					</object>
 				</object>
 				<string key="NSFrame">{{0, 64}, {320, 416}}</string>
@@ -680,6 +758,9 @@
 							<reference ref="358418181"/>
 							<reference ref="537858746"/>
 							<reference ref="807260245"/>
+							<reference ref="763577215"/>
+							<reference ref="970363619"/>
+							<reference ref="337528872"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -859,6 +940,21 @@
 						<reference key="parent" ref="271529655"/>
 						<string key="objectName">Loading Indicator</string>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">70</int>
+						<reference key="object" ref="763577215"/>
+						<reference key="parent" ref="880728759"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">71</int>
+						<reference key="object" ref="970363619"/>
+						<reference key="parent" ref="880728759"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">73</int>
+						<reference key="object" ref="337528872"/>
+						<reference key="parent" ref="880728759"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -904,6 +1000,9 @@
 					<string>59.IBPluginDependency</string>
 					<string>61.IBPluginDependency</string>
 					<string>62.IBPluginDependency</string>
+					<string>70.IBPluginDependency</string>
+					<string>71.IBPluginDependency</string>
+					<string>73.IBPluginDependency</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -945,7 +1044,7 @@
 					<real value="1"/>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<real value="2"/>
-					<real value="2"/>
+					<real value="1"/>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<real value="1"/>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -957,6 +1056,9 @@
 					<string>UserImageView</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>UserImageView</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -986,7 +1088,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">69</int>
+			<int key="maxID">73</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1001,11 +1103,9 @@
 							<string>handleRestampButtonTap:</string>
 							<string>handleSendButtonTap:</string>
 							<string>handleTodoButtonTap:</string>
-							<string>handleUserImageViewTap:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
@@ -1018,7 +1118,6 @@
 							<string>handleRestampButtonTap:</string>
 							<string>handleSendButtonTap:</string>
 							<string>handleTodoButtonTap:</string>
-							<string>handleUserImageViewTap:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -1032,10 +1131,6 @@
 							</object>
 							<object class="IBActionInfo">
 								<string key="name">handleTodoButtonTap:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">handleUserImageViewTap:</string>
 								<string key="candidateClassName">id</string>
 							</object>
 						</object>
@@ -1156,7 +1251,7 @@
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">UserImageView</string>
-					<string key="superclassName">UIButton</string>
+					<string key="superclassName">UIControl</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/UserImageView.h</string>
@@ -1180,8 +1275,8 @@
 			<bool key="EncodedWithXMLCoder">YES</bool>
 			<object class="NSArray" key="dict.sortedKeys">
 				<bool key="EncodedWithXMLCoder">YES</bool>
-				<string>disclosure_arrow.png</string>
 				<string>gradient_background.png</string>
+				<string>gray_disclosure_arrow.png</string>
 				<string>shelf_background.png</string>
 				<string>stamp_detail_ripple_bottom</string>
 				<string>stamp_detail_ripple_top</string>
@@ -1195,8 +1290,8 @@
 			</object>
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
-				<string>{16, 16}</string>
 				<string>{320, 480}</string>
+				<string>{16, 16}</string>
 				<string>{320, 240}</string>
 				<string>{16, 16}</string>
 				<string>{16, 16}</string>
